--- a/Proyecto_Examen.csproj
+++ b/Proyecto_Examen.csproj
@@ -59,6 +59,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="FrmGuardados.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="FrmPrincipal.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -69,6 +77,12 @@
     </Compile>
     <Compile Include="FrmCalculos.xaml.cs">
       <DependentUpon>FrmCalculos.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="FrmGuardados.xaml.cs">
+      <DependentUpon>FrmGuardados.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="FrmPrincipal.xaml.cs">
+      <DependentUpon>FrmPrincipal.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
